syntax = "proto3";

service GstoreReplicaService {
	rpc Update (UpdateRequest) returns (UpdateReply);

	rpc SyncLock (SyncLockRequest) returns (SyncLockReply);
	rpc InitiateSync (InitiateSyncRequest) returns (InitiateSyncReply);
	rpc FinishedSync (FinishedSyncRequest) returns (FinishedSyncReply);

	rpc PingReplica (PingReplicaRequest) returns (PingReplicaReply);
}

message UpdateRequest {
	string partition_id = 1;
	string object_id = 2;
	string value = 3;
	int32 write_id = 4;
	bool in_sync = 5;
}

message UpdateReply {
	bool ack = 1;
}

message SyncLockRequest {
	string partition_id = 1;
}

message SyncLockReply {
	int32 write_id = 1;
}

message InitiateSyncRequest {
	string partition_id = 1;
	string server_id = 2;
	int32 write_id = 3;
}

message InitiateSyncReply {
	bool ok = 1;
	int32 new_write_id = 2;
}

message FinishedSyncRequest {
	string partition_id = 1;
}

message FinishedSyncReply {
	bool ok = 1;
}

message PingReplicaRequest {
}

message PingReplicaReply {
	bool ok = 1;
}